# tree-sitter-lint-plugin-rust-scope-analysis

./: Cargo.toml
src/: ast_helpers.rs  kind.rs  lib.rs  path.rs
src/scope_analysis/: arenas.rs  definition.rs  mod.rs  reference.rs  scope.rs  scope_analyzer.rs  variable.rs
src/tests/: helpers.rs  mod.rs
src/tests/scope_analysis/: const.rs  enum.rs  extern_crate_declaration.rs  file.rs  function.rs  helpers.rs  macro.rs  mod.rs  module.rs  references.rs  static.rs  struct.rs  trait.rs  type_alias.rs  union.rs  use.rs
