[package]
name = "tree-sitter-lint-plugin-rust-scope-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-arena = "2.2.1"
itertools = "0.11.0"
tracing = "0.1.37"
tree-sitter-lint = { path = "../tree-sitter-lint" }

[patch.crates-io]
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter", rev = "c16b90d" }

[dev-dependencies]
speculoos = "0.11.0"
